--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -1,28 +1,34 @@
-# version: "3.7"
-# services:
-#   portainer-agent:
-#     image: portainer/agent:2.11.1
-#     volumes:
-#       - /var/run/docker.sock:/var/run/docker.sock
-#       - /var/lib/docker/volumes:/var/lib/docker/volumes
-#     deploy:
-#       mode: global
-#   portainer-server:
-#     image: portainer/portainer-ce:2.11.1
-#     command: -H tcp://tasks.portainer-agent:9001 --tlsskipverify
-#     # ports:
-#     #   - "9443:9443"
-#     #   - "9000:9000"
-#     #   - "8000:8000"
-#     volumes:
-#       - ${VOL_CONFIG}/portainer:/data
-#     deploy:
-#       mode: replicated
-#       replicas: 1
+version: "3.7"
+services:
+  librespeed:
+    image: lscr.io/linuxserver/librespeed
+    container_name: librespeed
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
+      - TZ=${TZ}
+      - PASSWORD=PASSWORD
+      - CUSTOM_RESULTS=false
+      - DB_TYPE=${LS_DB_TYPE}
+      - DB_NAME=${LS_DB_NAME}
+      - DB_HOSTNAME=${LS_DB_HOSTNAME}
+      - DB_USERNAME=${LS_DB_USERNAME}
+      - DB_PASSWORD=${LS_DB_PASSWORD}
+      - DB_PORT=${LS_DB_PORT}
+    volumes:
+      - ${VOL_CONFIG}/librespeed:/config
+    restart: ${RESTART_POLICY}
+    networks:
+      - db
+    labels:
+      - flame.type=app
+      - flame.name=Speed Test
+      - flame.url=https://speedtest.${DOMAIN}
+      - flame.icon=custom
 
-# networks:
-#   default:
-#     external:
-#       name: intranet
-
-
+networks:
+  default:
+    external:
+      name: intranet
+  db:
+    external: true
