--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -28,7 +28,7 @@ services:
 
 networks:
   default:
-    external:
-      name: intranet
+    external: true
+    name: intranet
   db:
     external: true
