--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -139,7 +139,7 @@ services:
 
 networks:
   default:
-    external:
-      name: intranet
+    external: true
+    name: intranet
   db:
     external: true
