--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     ports:
       - ${CODE_SERVER_PORT_8443}:8443
     networks:
+      - intranet
       - db
     restart: ${RESTART_POLICY}
     labels:
@@ -41,6 +42,7 @@ services:
       - ${MYSQL_WB_PORT_3000}:3000
     networks:
       - db
+      - intranet
     cap_add:
       - IPC_LOCK
     restart: ${RESTART_POLICY}
@@ -53,6 +55,7 @@ services:
   adminer:
     image: adminer
     networks:
+      - intranet
       - db
     ports:
       - 18080:8080
