--- a/vault/docker-compose.yml
+++ b/vault/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - ${FIREFLY_III_PORT_8080}:8080
     networks:
       - db
+      - intranet
     restart: ${RESTART_POLICY}
     labels:
       - swag=enable
@@ -22,6 +23,7 @@ services:
       - ${FIDI_PORT_8080}:8080
     networks:
       - db
+      - intranet
     labels:
       - swag=enable
       - swag_port=8080
@@ -38,6 +40,7 @@ services:
     restart: ${RESTART_POLICY}
     networks:
       - db
+      - intranet
     labels:
       - swag=enable
       - swag_port=80
@@ -64,6 +67,7 @@ services:
     restart: ${RESTART_POLICY}
     networks:
       - db
+      - intranet
     labels:
       - swag=enable
       - swag_port=8000
@@ -114,6 +118,7 @@ services:
     restart: unless-stopped
     networks:
       - db
+      - intranet
     labels:
       - flame.type=app
       - flame.name=bookstack
