Optimise db stack
- Remove commented code
- Created db the default network
- Fix redis volumes

--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -10,36 +10,24 @@ services:
       - MARIADB_PASSWORD=${MARIADB_MYSQL_PASSWORD}
     volumes:
       - ${VOL_GLUSTER_VOLUMES}/mariadb:/var/lib/mysql
-    # ports:
-    #   - ${MARIADB_PORT_3306}:3306
     restart: ${RESTART_POLICY}
-    networks:
-      - db
 
   redis:
     user: "${PUID}:${PGID}"
     image: redis:latest
-    # ports:
-    #   - ${REDIS_MASTER_PORT_6379}:6379
     environment:
       - REDIS_REPLICATION_MODE=master
       - REDIS_PASSWORD=${REDIS_MASTER_PASSWORD}
     volumes:
-      - ${VOL_GLUSTER_VOLUMES}/redis:/data
+      - ${VOL_GLUSTER_VOLUMES}/redis/master:/data
     command: redis-server --save 60 1 --loglevel warning
-    networks:
-      - db
     restart: ${RESTART_POLICY}
+
   redis-replica:
     user: "${PUID}:${PGID}"
     image: redis:latest
-    # ports:
-    #   - ${REDIS_SLAVE_PORT_6379}:6379
-    # depends_on:
-    # - redis
     volumes:
-      # - ${VOL_GLUSTER_VOLUMES}/redis/slave:/bitnami
-      - ${VOL_GLUSTER_VOLUMES}/redis:/data
+      - ${VOL_GLUSTER_VOLUMES}/redis/slave:/data
     environment:
       - REDIS_REPLICATION_MODE=slave
       - REDIS_MASTER_HOST=redis
@@ -47,9 +35,8 @@ services:
       - REDIS_MASTER_PASSWORD=${REDIS_MASTER_PASSWORD}
       - REDIS_PASSWORD=${REDIS_SLAVE_PASSWORD}
     restart: ${RESTART_POLICY}
-    networks:
-      - db
     command: redis-server --save 60 1 --loglevel warning --slaveof redis 6379
+
   postgres:
     user: "${PUID}:${PGID}"
     hostname: ${POSTGRES_MASTER_HOSTNAME}
@@ -69,14 +56,7 @@ services:
       - PG_PRIMARY_PORT=${POSTGRES_MASTER_PG_PRIMARY_PORT}
     volumes:
       - ${VOL_GLUSTER_VOLUMES}/postgres/master:/pgdata
-    # ports:
-    #   - ${POSTGRES_MASTER_PG_PRIMARY_PORT}:${POSTGRES_MASTER_PG_PRIMARY_PORT}
-    networks:
-      - db
-    # deploy:
-    #   placement:
-    #     constraints:
-    #       - node.role == manager
+
   postgres-replica:
     user: "${PUID}:${PGID}"
     image: crunchydata/crunchy-postgres:centos8-13.6-4.7.5
@@ -96,17 +76,8 @@ services:
       - PG_ROOT_PASSWORD=${POSTGRES_MASTER_PG_ROOT_PASSWORD}
     volumes:
       - ${VOL_GLUSTER_VOLUMES}/postgres/slave:/pgdata
-    # ports:
-    #   - ${POSTGRES_SLAVE_PG_PRIMARY_PORT}:5432
-    networks:
-      - db
-    # deploy:
-    #   placement:
-    #     constraints:
-    #       - node.role == manager
 
 networks:
-  intranet:
+  default:
     external: true
-  db:
-    external: true
+    name: db
