--- a/db/.env.sample
+++ b/db/.env.sample
@@ -6,13 +6,11 @@ RESTART_POLICY=unless-stopped
 #----------------------------------
 
 ############# VOLUMES #############
-VOL_DATA=/mnt/data
-VOL_CONFIG=/mnt/config
-VOL_GLUSTER_VOLUMES=/mnt/gluster_volumes
+VOL_CONFIG=
+VOL_GLUSTER_VOLUMES=
 
 
 ############# MARIADB #############
-MARIADB_PORT_3306=3306
 MARIADB_MYSQL_ROOT_PASSWORD=
 MARIADB_MYSQL_DATABASE=default_db
 MARIADB_MYSQL_USER=user_db
@@ -21,12 +19,9 @@ MARIADB_MYSQL_PASSWORD=
 ############# REDIS-CLUSTER #############
 REDIS_MASTER_PASSWORD=
 REDIS_SLAVE_PASSWORD=
-REDIS_MASTER_PORT_6379=6379
-REDIS_SLAVE_PORT_6379=6389
 
 ############# POSTGRES-MASTER #############
 POSTGRES_MASTER_PG_PRIMARY_PORT=5432
-POSTGRES_SLAVE_PG_PRIMARY_PORT=5433
 
 POSTGRES_MASTER_MAX_CONNECTIONS=50
 POSTGRES_MASTER_MAX_WAL_SENDERS=20
@@ -41,7 +36,3 @@ POSTGRES_MASTER_HOSTNAME=postgres
 ############# POSTGRES-SLAVE #############
 POSTGRES_SLAVE_MAX_CONNECTIONS=50
 POSTGRES_SLAVE_MAX_WAL_SENDERS=20
-
-
-############# Adiminer ####################
-ADMINER_SWAG_URL=adminer.domain.com
