Update variable notations

--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -4,78 +4,78 @@ services:
     image: mariadb
     container_name: mariadb
     environment:
-      - MARIADB_ROOT_PASSWORD=${MARIADB_MYSQL_ROOT_PASSWORD}
-      - MARIADB_DATABASE=${MARIADB_MYSQL_DATABASE}
-      - MARIADB_USER=${MARIADB_MYSQL_USER}
-      - MARIADB_PASSWORD=${MARIADB_MYSQL_PASSWORD}
+      - MARIADB_ROOT_PASSWORD=$MARIADB_MYSQL_ROOT_PASSWORD
+      - MARIADB_DATABASE=$MARIADB_MYSQL_DATABASE
+      - MARIADB_USER=$MARIADB_MYSQL_USER
+      - MARIADB_PASSWORD=$MARIADB_MYSQL_PASSWORD
     volumes:
-      - ${VOL_GLUSTER_VOLUMES}/mariadb:/var/lib/mysql
-    restart: ${RESTART_POLICY}
+      - $VOL_GLUSTER_VOLUMES/mariadb:/var/lib/mysql
+    restart: $RESTART_POLICY
 
   redis:
-    user: "${PUID}:${PGID}"
+    user: "$PUID:$PGID"
     image: redis:latest
     environment:
       - REDIS_REPLICATION_MODE=master
-      - REDIS_PASSWORD=${REDIS_MASTER_PASSWORD}
+      - REDIS_PASSWORD=$REDIS_MASTER_PASSWORD
     volumes:
-      - ${VOL_GLUSTER_VOLUMES}/redis/master:/data
+      - $VOL_GLUSTER_VOLUMES/redis/master:/data
     command: redis-server --save 60 1 --loglevel warning
-    restart: ${RESTART_POLICY}
+    restart: $RESTART_POLICY
 
   redis-replica:
-    user: "${PUID}:${PGID}"
+    user: "$PUID:$PGID"
     image: redis:latest
     volumes:
-      - ${VOL_GLUSTER_VOLUMES}/redis/slave:/data
+      - $VOL_GLUSTER_VOLUMES/redis/slave:/data
     environment:
       - REDIS_REPLICATION_MODE=slave
       - REDIS_MASTER_HOST=redis
       - REDIS_MASTER_PORT_NUMBER=6379
-      - REDIS_MASTER_PASSWORD=${REDIS_MASTER_PASSWORD}
-      - REDIS_PASSWORD=${REDIS_SLAVE_PASSWORD}
-    restart: ${RESTART_POLICY}
+      - REDIS_MASTER_PASSWORD=$REDIS_MASTER_PASSWORD
+      - REDIS_PASSWORD=$REDIS_SLAVE_PASSWORD
+    restart: $RESTART_POLICY
     command: redis-server --save 60 1 --loglevel warning --slaveof redis 6379
 
   postgres:
-    user: "${PUID}:${PGID}"
-    hostname: ${POSTGRES_MASTER_HOSTNAME}
+    user: "$PUID:$PGID"
+    hostname: $POSTGRES_MASTER_HOSTNAME
     image: crunchydata/crunchy-postgres:centos8-13.6-4.7.5
     environment:
       - PGHOST=/tmp
       - MODE=postgres
-      - MAX_CONNECTIONS=${POSTGRES_MASTER_MAX_CONNECTIONS}
-      - MAX_WAL_SENDERS=${POSTGRES_MASTER_MAX_WAL_SENDERS}
+      - MAX_CONNECTIONS=$POSTGRES_MASTER_MAX_CONNECTIONS
+      - MAX_WAL_SENDERS=$POSTGRES_MASTER_MAX_WAL_SENDERS
       - PG_MODE=primary
-      - PG_PRIMARY_USER=${POSTGRES_MASTER_PG_PRIMARY_USER}
-      - PG_PRIMARY_PASSWORD=${POSTGRES_MASTER_PG_PRIMARY_PASSWORD}
-      - PG_DATABASE=${POSTGRES_MASTER_PG_DATABASE}
-      - PG_USER=${POSTGRES_MASTER_PG_USER}
-      - PG_PASSWORD=${POSTGRES_MASTER_PG_PASSWORD}
-      - PG_ROOT_PASSWORD=${POSTGRES_MASTER_PG_ROOT_PASSWORD}
-      - PG_PRIMARY_PORT=${POSTGRES_MASTER_PG_PRIMARY_PORT}
+      - PG_PRIMARY_USER=$POSTGRES_MASTER_PG_PRIMARY_USER
+      - PG_PRIMARY_PASSWORD=$POSTGRES_MASTER_PG_PRIMARY_PASSWORD
+      - PG_DATABASE=$POSTGRES_MASTER_PG_DATABASE
+      - PG_USER=$POSTGRES_MASTER_PG_USER
+      - PG_PASSWORD=$POSTGRES_MASTER_PG_PASSWORD
+      - PG_ROOT_PASSWORD=$POSTGRES_MASTER_PG_ROOT_PASSWORD
+      - PG_PRIMARY_PORT=$POSTGRES_MASTER_PG_PRIMARY_PORT
     volumes:
-      - ${VOL_GLUSTER_VOLUMES}/postgres/master:/pgdata
+      - $VOL_GLUSTER_VOLUMES/postgres/master:/pgdata
 
   postgres-replica:
-    user: "${PUID}:${PGID}"
+    user: "$PUID:$PGID"
     image: crunchydata/crunchy-postgres:centos8-13.6-4.7.5
     environment:
       - PGHOST=/tmp
       - MODE=postgres
-      - MAX_CONNECTIONS=${POSTGRES_SLAVE_MAX_CONNECTIONS}
-      - MAX_WAL_SENDERS=${POSTGRES_SLAVE_MAX_WAL_SENDERS}
+      - MAX_CONNECTIONS=$POSTGRES_SLAVE_MAX_CONNECTIONS
+      - MAX_WAL_SENDERS=$POSTGRES_SLAVE_MAX_WAL_SENDERS
       - PG_MODE=replica
-      - PG_PRIMARY_HOST=${POSTGRES_MASTER_HOSTNAME}
-      - PG_PRIMARY_PORT=${POSTGRES_MASTER_PG_PRIMARY_PORT}
-      - PG_PRIMARY_USER=${POSTGRES_MASTER_PG_PRIMARY_USER}
-      - PG_PRIMARY_PASSWORD=${POSTGRES_MASTER_PG_PRIMARY_PASSWORD}
-      - PG_DATABASE=${POSTGRES_MASTER_PG_DATABASE}
-      - PG_USER=${POSTGRES_MASTER_PG_USER}
-      - PG_PASSWORD=${POSTGRES_MASTER_PG_PASSWORD}
-      - PG_ROOT_PASSWORD=${POSTGRES_MASTER_PG_ROOT_PASSWORD}
+      - PG_PRIMARY_HOST=$POSTGRES_MASTER_HOSTNAME
+      - PG_PRIMARY_PORT=$POSTGRES_MASTER_PG_PRIMARY_PORT
+      - PG_PRIMARY_USER=$POSTGRES_MASTER_PG_PRIMARY_USER
+      - PG_PRIMARY_PASSWORD=$POSTGRES_MASTER_PG_PRIMARY_PASSWORD
+      - PG_DATABASE=$POSTGRES_MASTER_PG_DATABASE
+      - PG_USER=$POSTGRES_MASTER_PG_USER
+      - PG_PASSWORD=$POSTGRES_MASTER_PG_PASSWORD
+      - PG_ROOT_PASSWORD=$POSTGRES_MASTER_PG_ROOT_PASSWORD
     volumes:
-      - ${VOL_GLUSTER_VOLUMES}/postgres/slave:/pgdata
+      - $VOL_GLUSTER_VOLUMES/postgres/slave:/pgdata
 
 networks:
   default:
