Optimised essential and dev stack

--- a/dev/.env.sample
+++ b/dev/.env.sample
@@ -3,6 +3,7 @@ PUID=1000
 PGID=1000
 TZ=Australia/Melbourne
 RESTART_POLICY=unless-stopped
+DOMAIN=
 #----------------------------------
 
 ############# VOLUMES #############
