--- a/essentials/docker-compose.yml
+++ b/essentials/docker-compose.yml
@@ -1,3 +1,12 @@
+x-networks:
+  &networks
+  networks:
+    - agent_network
+x-flame-labels:
+  &flame_labels
+  flame.type: app
+  flame.icon: custom
+
 version: "3.7"
 services:
   agent:
@@ -5,8 +14,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/volumes:/var/lib/docker/volumes
-    networks:
-      - agent_network
+    <<: *networks
     deploy:
       mode: global
       placement:
@@ -21,14 +29,17 @@ services:
       - "8000:8000"
     volumes:
       - ${VOL_CONFIG}/portainer:/data
-    networks:
-      - agent_network
+    <<: *networks
     deploy:
       mode: replicated
       replicas: 1
       placement:
         constraints: [ node.role == manager ]
     restart: ${RESTART_POLICY}
+    labels:
+      <<: *flame_labels
+      flame.name: Portainer
+      flame.url: https://portainer.$DOMAIN
   flame:
     image: pawelmalak/flame
     container_name: flame
@@ -37,10 +48,14 @@ services:
       - DOCKER_HOST=dockerproxy
     volumes:
       - ${VOL_CONFIG}/flame:/app/data
-      - /var/run/docker.sock:/var/run/docker.sock
+      - DCOKER_HOST=dockerproxy
     restart: ${RESTART_POLICY}
     deploy:
       mode: global
+    labels:
+      <<: *flame_labels
+      flame.name: Flame
+      flame.url: https://flame.$DOMAIN
   dockerproxy:
     image: ghcr.io/tecnativa/docker-socket-proxy:latest
     container_name: dockerproxy
