--- a/home/docker-compose.yml
+++ b/home/docker-compose.yml
@@ -1,46 +1,47 @@
+x-environment:
+  &environment
+  PUID: $PUID
+  PGID: $PGID
+  TZ: $TZ
+
+x-flame-labels:
+  &flame_labels
+  flame.type: app
+  flame.icon: custom
+
 version: "3.7"
 services:
   homeassistant:
     image: ghcr.io/linuxserver/homeassistant
     container_name: homeassistant
-    # env_file: .env
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
+      <<: *environment
     volumes:
-      - ${VOL_CONFIG}/homeassistant:/config
-    restart: ${RESTART_POLICY}
+      - $VOL_CONFIG/homeassistant:/config
+    restart: $RESTART_POLICY
     labels:
-      - swag=enable
-      - swag_port=8123
-      - swag_proto=http
-      - swag_url=home.*
+      <<: *flame_labels
+      flame.name: Home Assistant
+      flame.url: https://home.$DOMAIN
   grocy:
     image: lscr.io/linuxserver/grocy
     container_name: grocy
-    # env_file: .env
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
+      <<: *environment
     volumes:
-      - ${VOL_CONFIG}/grocy:/config
-    restart: ${RESTART_POLICY}
-    ports:
-      - ${GROCY_PORT_80}:80
+      - $VOL_CONFIG/grocy:/config
+    restart: $RESTART_POLICY
     labels:
-      - swag=enable
+      <<: *flame_labels
+      flame.name: Grocy
+      flame.url: https://grocy.$DOMAIN
 
   mqtt:
     image: eclipse-mosquitto:latest
     container_name: "mqtt"
-    restart: ${RESTART_POLICY}
+    restart: $RESTART_POLICY
     volumes:
-      - ${VOL_CONFIG}/mqtt:/mosquitto
-    # ports:
-    #   - 1883:1883
-    #   - 9001:9001
+      - $VOL_CONFIG/mqtt:/mosquitto
 
 networks:
   default:
