Optimise vault and monitor stack
- Created anchors for environment, flame-labels, networks
- Add flame labels to all the services
- Update variable notations
- Remove unnecessary
- Update sample .env

--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -1,31 +1,43 @@
+x-networks:
+  &networks
+  networks:
+    - db
+    - intranet
+
+x-flame-labels:
+  &flame_labels
+  flame.type: app
+  flame.icon: custom
+
+x-environment:
+  &environment
+  PUID: $PUID
+  PGID: $PGID
+  TZ: $TZ
+
 version: "3.7"
 services:
   librespeed:
     image: lscr.io/linuxserver/librespeed
     container_name: librespeed
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - TZ=${TZ}
-      - PASSWORD=PASSWORD
-      - CUSTOM_RESULTS=false
-      - DB_TYPE=${LS_DB_TYPE}
-      - DB_NAME=${LS_DB_NAME}
-      - DB_HOSTNAME=${LS_DB_HOSTNAME}
-      - DB_USERNAME=${LS_DB_USERNAME}
-      - DB_PASSWORD=${LS_DB_PASSWORD}
-      - DB_PORT=${LS_DB_PORT}
+      <<: *environment
+      PASSWORD: PASSWORD
+      CUSTOM_RESULTS: false
+      DB_TYPE: $LS_DB_TYPE
+      DB_NAME: $LS_DB_NAME
+      DB_HOSTNAME: $LS_DB_HOSTNAME
+      DB_USERNAME: $LS_DB_USERNAME
+      DB_PASSWORD: $LS_DB_PASSWORD
+      DB_PORT: $LS_DB_PORT
     volumes:
-      - ${VOL_CONFIG}/librespeed:/config
-    restart: ${RESTART_POLICY}
-    networks:
-      - intranet
-      - db
+      - $VOL_CONFIG/librespeed:/config
+    restart: $RESTART_POLICY
+    <<: *networks
     labels:
-      - flame.type=app
-      - flame.name=Speed Test
-      - flame.url=https://speedtest.${DOMAIN}
-      - flame.icon=custom
+      <<: *flame_labels
+      flame.name: Speed Test
+      flame.url: https://speedtest.$DOMAIN
 
 networks:
   intranet:
